packages/react/src/SubNav/SubNav.module.css
.SubNav {
  position: absolute;
  width: 100%;
  display: flex;
  padding: var(--base-size-16);
  z-index: 1;
}

.SubNav__heading {
  font-weight: var(--base-text-weight-bold);
  color: var(--brand-color-text-default);
  font-family: var(--brand-heading-fontFamily);
  text-decoration: none;
}

.SubNav__heading:hover {
  color: var(--brand-SubNav-color-link-active);
  text-decoration: none !important; /* dotcom override */
}

.SubNav__heading-container {
  position: relative;
  z-index: 9998;
  display: inline-block;
  margin-inline-end: var(--base-size-16);
}

.SubNav--has-shadow {
  box-shadow: var(--brand-SubNav-shadow);
  background-color: var(--brand-color-canvas-default);
}

.SubNav--full-width {
  padding-inline: 0;
}

.SubNav__action-container {
  margin-left: auto;
}

.SubNav__sub-menu-icon {
  display: none !important;
}

/*
 * Narrow breakpoint
 */

@media screen and (max-width: 63.24rem) {
  .SubNav::before {
    content: '';
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    opacity: 0;
    z-index: 9997;
  }

  .SubNav--open::after {
    content: '';
    background-color: var(--base-color-scale-black-0);
    opacity: 0.3;
    position: fixed;
    top: 0;
    right: 0;
    left: 0;
    bottom: 0;
    width: 100%;
    height: 100%;
    z-index: -1;
  }

  .SubNav__heading {
    font-size: var(--base-size-20);
    line-height: var(--base-size-20);
  }

  .SubNav--open {
    display: block;
  }

  .SubNav--open::before {
    background-color: var(--brand-color-canvas-default);
    animation: fade-in 0.3s var(--brand-animation-easing-glide) forwards;
  }

  .SubNav__links-overlay {
    position: relative;
    display: flex;
    flex: auto;
    flex-direction: column;
    justify-content: center;
    z-index: 9998;
  }

  .SubNav__links-overlay--open {
    display: flex;
    flex-direction: column;
    gap: var(--base-size-8);
    padding-block-start: var(--base-size-16);
    padding-block-end: var(--base-size-16);
  }

  .SubNav__overlay-toggle {
    background-color: transparent;
    border: none;
    cursor: pointer;
    display: flex;
    position: absolute;
    top: var(--base-size-16);
    right: var(--base-size-16);
    order: 1;
    z-index: 9999;
    padding-inline: 0;
  }

  .SubNav--full-width .SubNav__overlay-toggle {
    right: 0;
  }

  .SubNav__link,
  .SubNav__action-container {
    display: none;
    text-decoration: none;
  }

  .SubNav__links-overlay--open .SubNav__link[aria-current]:not([aria-current='false']) * {
    color: var(--brand-SubNav-color-link-active);
  }

  .SubNav__links-overlay--open .SubNav__link,
  .SubNav__links-overlay--open .SubNav__action-container {
    display: block;
    padding: var(--base-size-8) 0;
    animation: fade-in 0.3s var(--brand-animation-easing-glide) forwards;
  }
  .SubNav__links-overlay--open .SubNav__action-container {
    width: 100%;
  }

  .SubNav__links-overlay--open .SubNav__action {
    width: 100%;
  }

  .SubNav__sub-menu {
    padding-inline-start: var(--base-size-16);
  }
}

.SubNav__overlay-toggle-icon {
  fill: var(--brand-color-text-default);
}

.SubNav__overlay-toggle-content {
  display: flex;
  align-items: center;
  gap: var(--base-size-8);

  /* optical alignment */
  position: relative;
  top: calc(var(--base-size-4) / 4 * -1);
}

@media screen and (min-width: 48rem) {
  .SubNav {
    padding: var(--base-size-16) var(--base-size-24);
  }

  .SubNav--full-width {
    padding-inline: 0;
  }
}

/*
 * Wide breakpoint
 */

@media screen and (min-width: 63.25rem) {
  .SubNav {
    padding: var(--base-size-16) var(--base-size-32);
    align-items: center;
  }

  .SubNav--full-width {
    padding-inline: 0;
  }

  .SubNav__overlay-toggle {
    display: none;
  }

  .SubNav__heading {
    font-size: var(--base-size-20);
    line-height: var(--base-size-20);
  }

  .SubNav {
    display: flex;
  }

  .SubNav__heading-container {
    margin-inline-end: var(--base-size-24);
  }

  .SubNav__links-overlay {
    align-items: center;
    display: flex;
    gap: var(--base-size-24);
    z-index: 1;
    width: 100%;
  }

  .SubNav__link {
    text-decoration: none !important; /* dotcom override */
    transition: color 0.2s var(--brand-animation-easing-glide);
    position: relative;
    padding: 4px 0;
  }

  .SubNav__link:hover *,
  .SubNav__link[aria-current]:not([aria-current='false']) * {
    color: var(--brand-SubNav-color-link-active);
    text-decoration: none !important; /* dotcom override */
  }

  .SubNav__link-label::after {
    content: '';
    position: absolute;
    bottom: -6px;
    left: 0;
    width: 100%;
    height: 2px;
    background-color: var(--brand-SubNav-color-link-active);
    transition: opacity var(--brand-animation-duration-fast), transform var(--brand-animation-duration-fast),
      background-color var(--brand-animation-duration-fast);
    opacity: 1;
    transform: scale(0);
    transform-origin: center;
  }

  .SubNav__link:hover .SubNav__link-label::after,
  .SubNav__link:focus .SubNav__link-label::after,
  .SubNav__link[aria-current]:not([aria-current='false']) .SubNav__link-label::after {
    opacity: 1;
    transform: translate3d(0, 0.2em, 0);
    transform: scale(0.8, 1);
  }

  .SubNav__link:active .SubNav__link-label::after {
    background-color: var(--brand-color-text-default);
    transform: scale(0.9, 1);
  }

  .SubNav__link[data-active='true'] .SubNav__link-label::after {
    background-color: var(--brand-color-text-default);
    opacity: 1;
  }

  .SubNav__link:focus-visible .SubNav__link-label::after {
    opacity: 0;
  }

  .SubNav__sub-menu {
    background-clip: padding-box;
    background-color: var(--brand-SubNav-color-subMenu-bgColor);
    border: var(--borderWidth-thin, max(1px, 0.0625rem)) solid var(--borderColor-default, var(--color-border-default));
    border-radius: var(--borderRadius-medium, 0.375rem);
    box-shadow: var(--shadow-floating-legacy, var(--color-shadow-large));
    left: 0;
    list-style: none;
    margin-top: calc(var(--base-size-4) / 4 * -4);
    padding: var(--base-size-16) var(--base-size-24);
    position: absolute;
    top: 100%;
    z-index: 100;
    transition-timing-function: var(--brand-animation-easing-glide);
    transition-duration: var(--brand-animation-duration-fast);
    transition-property: opacity, transform;
    left: calc(var(--base-size-4) / 4 * -16);
    visibility: hidden;
    opacity: 0;
    transform: scale(0.99) translateY(-0.7em);
    transform-origin: top;
    display: flex;
    flex-direction: column;
    gap: var(--base-size-16);
    width: var(--brand-SubNav-width-subMenu);
  }

  .SubNav__link:hover .SubNav__sub-menu {
    visibility: visible;
    opacity: 1;
    transform: scale(1) translateY(0);
    box-shadow: var(--brand-SubNav-shadow);
  }

  .SubNav__sub-menu .SubNav__link {
    display: block;
  }
  .SubNav__sub-menu .SubNav__link-label {
    color: var(--brand-color-text-default);
    font-weight: var(--brand-text-weight-100);
    font-size: var(--brand-text-size-100);
    line-height: var(--brand-text-lineHeight-100);
    letter-spacing: var(--brand-text-letterSpacing-100);
  }

  .SubNav__sub-menu .SubNav__link:hover .SubNav__link-label {
    color: var(--brand-SubNav-color-link-active);
  }

  .SubNav__sub-menu .SubNav__link-label::after,
  .SubNav__link--has-sub-menu .SubNav__link-label::after {
    display: none;
  }

  .SubNav__link--has-sub-menu {
    display: inline-flex;
    align-items: center;
    gap: var(--base-size-4);
    cursor: pointer;
  }

  .SubNav__sub-menu-icon {
    display: inline-block !important;
    fill: var(--brand-color-text-muted);
    transition: transform var(--brand-animation-duration-fast);
  }

  .SubNav__link--has-sub-menu:hover .SubNav__sub-menu-icon {
    transform: translateY(2px);
  }
}

@keyframes fade-in {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

@keyframes fade-in-down {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

